# umrf_modality_demo

./: .gitignore  .gitmodules  README.md
src/drive_action_host/: CMakeLists.txt  package.xml
src/drive_action_host/config/: drive_params.yaml
src/drive_action_host/launch/: drive_host.launch
src/drive_action_host/msg/: AngDrive.msg  LinDrive.msg
src/drive_action_host/scripts/: drive_host.py
src/drive_action_host/srv/: AngDrive.srv  LinDrive.srv
src/jackal_temoto_ws/: README.md
src/jackal_temoto_ws/actions/ta_drive/: CMakeLists.txt  package.xml  umrf.json
src/jackal_temoto_ws/actions/ta_drive/src/: ta_drive.cpp
src/jackal_temoto_ws/actions/ta_gesture_to_umrf/: CMakeLists.txt  package.xml  umrf.json
src/jackal_temoto_ws/actions/ta_move/: CMakeLists.txt  package.xml  umrf.json
src/jackal_temoto_ws/actions/ta_rotate/: CMakeLists.txt  package.xml  umrf.json
src/jackal_temoto_ws/actions/ta_start_drive_host/: CMakeLists.txt  package.xml  umrf.json
src/jackal_temoto_ws/actions/ta_stop/: CMakeLists.txt  package.xml  umrf.json
src/jackal_temoto_ws/jackal_temoto_ws/: CMakeLists.txt  components.yaml  package.xml  pipes.yaml
src/jackal_temoto_ws/jackal_temoto_ws/config/: action_dst.yaml
src/jackal_temoto_ws/jackal_temoto_ws/launch/: action_assistant.launch  openpose_remappable.launch  openpose_ros.launch  temoto.launch  usb_cam_remappable.launch
src/operator_temoto_ws/actions/ta_nlp_umrf/: CMakeLists.txt  package.xml  umrf.json
src/operator_temoto_ws/actions/ta_start_camera/: CMakeLists.txt  package.xml  umrf.json
src/operator_temoto_ws/operator_temoto_ws/: CMakeLists.txt  components.yaml  package.xml  pipes.yaml
src/operator_temoto_ws/operator_temoto_ws/config/: action_dst.yaml
src/operator_temoto_ws/operator_temoto_ws/launch/: action_assistant.launch  temoto.launch
src/text_to_umrf/: CMakeLists.txt  package.xml
src/text_to_umrf/scripts/: tumrf_web_agent.py
src/text_to_umrf/src/: text_to_umrf.cpp
(+34 files in other folders)
